--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,90 @@
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 nav {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
-  height: 5vh;
-  width: 100%;
-  padding: 10px;
+  height: 55px;
+  width: 100vw;
   background-color:  #202020;
 }
-
-nav input[type="text"] {
-  width: 
+.cluster1 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 25%;
+  height: 100%;
+  padding-left: 5px;
+}
+.hamburger {
+  width: 32px;
+  height: 32px;
+  border: none;
+  border-radius: 50%;
+  background-color: #202020;
+  cursor: pointer;
+  margin-right: 8px;
+}
+.hamburger span {
+  display: block;
+  width: 20px;
+  height: 1px;
+  background-color: white;
+  margin: 6px 0;
+}
+.imgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  overflow: hidden;
+  cursor: pointer;
+}
+.imgContainer img {
+  height: 80px;
+  min-width: 100%;
+}
+.cluster2 {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 50%;
+}
+.searchCluster {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: #121212;
+  border: 1px solid #323232;
+}
+.search {
+  width: 80%;
+  height: 30px;
+  background-color: #121212;
+  border: none;
+  outline: none;
+  color: white;
+  font-size: 1rem;
+  padding-left: 10px;
+}
+.searchButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 68px;
+  height: 38px;
+  background-color: #323232;
+  border: none;
+}
+.searchButton img {
+  height: 22px;
+  width: 20px;
+}
+.cluster3 {
+  display: flex;
+  height: 100%;
+  width: 25%;
 }
