--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap');
+
+body {
+  font-family: 'Roboto Mono', monospace;
+}
 header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
 }
@@ -7,25 +12,31 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 55px;
+  height: 60px;
   width: 100vw;
-  background-color:  #202020;
+  background-color: #202020;
+}
+button, input[type="text"] {
+  border: none;
+  outline: none;
+}
+button {
+  cursor: pointer;
+  padding: 0;
 }
 .cluster1 {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 25%;
+  width: 20%;
   height: 100%;
-  padding-left: 5px;
+  padding-left: 15px;
 }
 .hamburger {
   width: 32px;
   height: 32px;
-  border: none;
   border-radius: 50%;
   background-color: #202020;
-  cursor: pointer;
   margin-right: 8px;
 }
 .hamburger span {
@@ -49,6 +60,7 @@ nav {
 }
 .cluster2 {
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
   height: 100%;
   width: 50%;
@@ -56,19 +68,33 @@ nav {
 .searchCluster {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 100%;
   background-color: #121212;
   border: 1px solid #323232;
+  padding-right: 10px;
 }
-.search {
-  width: 80%;
+.searchInput {
+  width: 100%;
   height: 30px;
   background-color: #121212;
-  border: none;
-  outline: none;
   color: white;
   font-size: 1rem;
   padding-left: 10px;
+}
+.searchCluster:focus {
+  border: 1px solid #1C62B9;
+}
+.deleteButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #121212;
+  height: 20px;
+  width: 20px;
+}
+.deleteButton img {
+  height: 16px;
 }
 .searchButton {
   display: flex;
@@ -77,14 +103,55 @@ nav {
   width: 68px;
   height: 38px;
   background-color: #323232;
-  border: none;
+  margin-right: 8px;
 }
 .searchButton img {
   height: 22px;
   width: 20px;
 }
+.microphoneButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  height: 40px;
+  width: 55px;
+  background-color: #181818;
+  margin-right: 20px;
+}
 .cluster3 {
   display: flex;
+  flex-direction: row;
+  align-items: center;
   height: 100%;
-  width: 25%;
+  width: 30%;
+  background-color: #202020;
+}
+.cluster3 button {
+  width: 30px;
+  height: 30px;
+  background-color: #202020;
+  margin-right: 20px;
+}
+.cluster3 img {
+  width: 100%;
+  height: auto;
+}
+.signIn {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 90px;
+  padding-left: 8px;
+  height: 40px;
+  border: 1px solid #3EA6FF;
+  color: #3EA6FF;
+  font-size: 14px;
+}
+.content {
+  background-color: #181818;
+  height: 100vh;
+  width: 100vw;
+  padding: 25px;
 }
