--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Roboto', monospace;
 }
 header {
   position: sticky;
@@ -13,7 +13,7 @@ nav {
   flex-direction: row;
   align-items: center;
   height: 60px;
-  width: 100vw;
+  width: 100%;
   background-color: #202020;
 }
 button, input[type="text"] {
@@ -28,9 +28,9 @@ button {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 20%;
+  min-width: 20%;
   height: 100%;
-  padding-left: 15px;
+
 }
 .hamburger {
   width: 32px;
@@ -38,6 +38,7 @@ button {
   border-radius: 50%;
   background-color: #202020;
   margin-right: 8px;
+  padding: 0 15px;
 }
 .hamburger span {
   display: block;
@@ -63,7 +64,7 @@ button {
   justify-content: space-evenly;
   align-items: center;
   height: 100%;
-  width: 50%;
+  min-width: 50%;
 }
 .searchCluster {
   display: flex;
@@ -124,17 +125,18 @@ button {
   flex-direction: row;
   align-items: center;
   height: 100%;
-  width: 30%;
+  min-width: 30%;
   background-color: #202020;
 }
 .cluster3 button {
   width: 30px;
-  height: 30px;
+  
   background-color: #202020;
   margin-right: 20px;
 }
 .cluster3 img {
-  width: 100%;
+  width: 30px;
+  height: 30px;
   height: auto;
 }
 .signIn {
@@ -142,16 +144,76 @@ button {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: 90px;
-  padding-left: 8px;
-  height: 40px;
+  width: 120px;
+  padding-left: 5px;
+  padding-right: 5px;
+  height: 45px;
   border: 1px solid #3EA6FF;
   color: #3EA6FF;
   font-size: 14px;
 }
 .content {
+  display: flex;
+  flex-direction: column;
   background-color: #181818;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   padding: 25px;
+}
+.main button {
+  background-color: #181818;
+}
+.videoContainer {
+  max-width: 100%;
+  height: 500px;
+  background-color: white;
+}
+#video {
+  width: 100%;
+  height: 100%;
+}
+.infoContainer {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  width: 100%;
+  padding-top: 25px;
+}
+.videoHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  height: 75px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+.videoHeader h4 {
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin-bottom: 18px;
+}
+.videoHeader span {
+  display: flex;
+  color: #aaa;
+}
+.header1 {
+  padding-bottom: 25px;
+}
+.header2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+.likeDislike {
+  display: flex;
+  justify-content: space-around;
+  width: 150px;
+  padding: 10px 0;
+  border-bottom: 2px solid white;
 }
