--- a/styles.css
+++ b/styles.css
@@ -368,3 +368,26 @@ button {
   border-radius: 50%;
   margin-right: 15px;
 }
+.filterVideos {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 50px;
+  width: 100%;
+  gap: 5px;
+
+}
+.pill {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 80;
+  background-color: #464646;
+  border-radius: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  color: white;
+  font-size: 15px;
+  padding: 12px;
+}
