--- a/styles.css
+++ b/styles.css
@@ -384,10 +384,61 @@ button {
   align-items: center;
   height: 30px;
   width: 80;
-  background-color: #464646;
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   border: 1px solid rgba(255, 255, 255, 0.1);
   color: white;
   font-size: 15px;
   padding: 12px;
+  transition: background-color 0.5s cubic-bezier(0.05,0,0,1);
+}
+.pill:hover {
+  background-color: #464646;
+}
+.listVideos {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 100%;
+}
+.listItem {
+  height: 94px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+  color: white;
+  gap: 12px;
+  margin-bottom: 12px;
+}
+.listItem span img {
+  height: 100%;
+  width: 168px;
+}
+.listItem span:nth-child(2) {
+  padding-top: 4px;
+  width: auto;
+  height: 100%;
+}
+.listItem span:nth-child(2) h4 {
+  margin-bottom: 8px;
+}
+.listItem span:nth-child(2) p {
+  font-size: 0.85rem;
+  line-height: 1.1rem;
+  color: #aaa;
+}
+.showMoreButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #3EA6FF;
+  width: 100%;
+  height: 40px;
+  background-color: #181818;
+  color: #3EA6FF;
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 25px;
 }
