--- a/styles.css
+++ b/styles.css
@@ -187,35 +187,45 @@ button {
 }
 .videoHeader {
   display: flex;
-  flex-direction: row;
-  align-items: flex-end;
+  flex-direction: column;
   height: 75px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 .videoHeader h4 {
   font-weight: bold;
   letter-spacing: 1px;
-  margin-bottom: 18px;
 }
 .videoHeader span {
   display: flex;
   color: #aaa;
 }
+.videoHeaderInfo {
+  max-width: 20%;
+  height: auto;
+}
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 80%;
+}
 .header1 {
-  width: 50%;
-  padding-bottom: 25px;
+  width: 100%;
 }
 .header2 {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: flex-end;
-  width: 50%;
+  align-items: flex-start;
+  width: 100%;
+  margin-top: 10px;
 }
+
 .likeDislike {
   display: flex;
+  align-items: flex-start;
   justify-content: space-evenly;
-  width: 150px;
+  min-width: 150px;
   padding: 10px 0;
   border-bottom: 2px solid white;
 }
@@ -223,21 +233,22 @@ button {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 50%;
+  min-width: 50%;
   color: white;
 }
 .header2Buttons {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 400px;
-  padding: 10px 0 10px 15px;
+  justify-content: flex-start;
+  align-items: flex-start;
+  min-width: 400px;
+  padding: 10px 0;
+  gap: 15px;
 }
 .header2Buttons span {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
-  width: 50%;
+  align-items: flex-start;
+  min-width: 15%;
   color: white;
 }
 .header2Buttons span button {
@@ -247,8 +258,8 @@ button {
   display: flex;
   flex-direction: row;
   padding-top: 20px;
-  height: 240px;
-  width: 100%;
+  min-height: 240px;
+  min-width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 .videoDescription h6 {
@@ -335,8 +346,9 @@ button {
   align-items: center;
   background-color: #0F0F0F;
   height: 110px;
-  width: 40%;
+  min-width: 40%;
   cursor: pointer;
+  padding-right: 8px;
 }
 .card:nth-child(1) img {
   margin-right: 20px;
@@ -371,19 +383,20 @@ button {
 .filterVideos {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
   height: 50px;
-  width: 100%;
+  min-width: 100%;
   gap: 5px;
-
+  overflow: hidden;
+  white-space: nowrap;
 }
 .pill {
   display: flex;
   justify-content: center;
   align-items: center;
+  flexwrap: nowrap;
   height: 30px;
-  width: 80;
+  min-width: 12px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -416,15 +429,15 @@ button {
   height: 100%;
   width: 168px;
 }
-.listItem span:nth-child(2) {
+.spanText {
   padding-top: 4px;
   width: auto;
   height: 100%;
 }
-.listItem span:nth-child(2) h4 {
+.spanText h4 {
   margin-bottom: 8px;
 }
-.listItem span:nth-child(2) p {
+.spanText p {
   font-size: 0.85rem;
   line-height: 1.1rem;
   color: #aaa;
@@ -441,4 +454,16 @@ button {
   font-weight: bold;
   font-size: 16px;
   margin-bottom: 25px;
+}
+.disabledComments {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 25px;
+  color: white;
+}
+.disabledComments a {
+  color: #3EA6FF;
+  text-decoration: none;
 }
