--- a/styles.css
+++ b/styles.css
@@ -61,16 +61,16 @@ button {
 }
 .cluster2 {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   height: 100%;
-  min-width: 50%;
+  min-width: 40%;
 }
 .searchCluster {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 100%;
+  width: 80%;
   background-color: #121212;
   border: 1px solid #323232;
   padding-right: 10px;
@@ -116,21 +116,22 @@ button {
   align-items: center;
   border-radius: 50%;
   height: 40px;
-  width: 55px;
+  width: 40px;
   background-color: #181818;
   margin-right: 20px;
 }
 .cluster3 {
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
   height: 100%;
-  min-width: 30%;
+  min-width: 40%;
   background-color: #202020;
+  padding-right: 25px;
 }
 .cluster3 button {
   width: 30px;
-  
   background-color: #202020;
   margin-right: 20px;
 }
@@ -151,6 +152,7 @@ button {
   border: 1px solid #3EA6FF;
   color: #3EA6FF;
   font-size: 14px;
+  cursor: pointer;
 }
 .content {
   display: flex;
@@ -195,19 +197,20 @@ button {
   font-weight: bold;
   letter-spacing: 1px;
 }
-.videoHeader span {
-  display: flex;
-  color: #aaa;
-}
 .videoHeaderInfo {
-  max-width: 20%;
-  height: auto;
+  display: flex;
+  align-items: center;
+  min-width: 20%;
+  height: 100%;
+  font-size: 14px;
+  white-space: nowrap;
 }
 .buttonContainer {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   width: 80%;
+  padding-top: 10px;
 }
 .header1 {
   width: 100%;
@@ -215,19 +218,20 @@ button {
 .header2 {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 100%;
+  justify-content: space-between;
+  align-items: flex-end;
+  min-width: 100%;
   margin-top: 10px;
 }
-
 .likeDislike {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-evenly;
-  min-width: 150px;
-  padding: 10px 0;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  max-width: 26%;
   border-bottom: 2px solid white;
+  padding-bottom: 10px;
+  gap: 15px;
 }
 .likeDislike span {
   display: flex;
@@ -238,18 +242,18 @@ button {
 }
 .header2Buttons {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  min-width: 400px;
-  padding: 10px 0;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
   gap: 15px;
 }
 .header2Buttons span {
   display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  min-width: 15%;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 5%;
   color: white;
+  cursor: pointer;
 }
 .header2Buttons span button {
   margin-right: 5px;
@@ -266,9 +270,6 @@ button {
   font-weight: bold;
   font-size: 15px;
   margin-bottom: 5px;
-}
-.videoTitle {
-
 }
 .videoTitle p {
   font-size: 12px;
@@ -385,7 +386,7 @@ button {
   flex-direction: row;
   align-items: center;
   height: 50px;
-  min-width: 100%;
+  min-width: 100vw;
   gap: 5px;
   overflow: hidden;
   white-space: nowrap;
@@ -394,9 +395,9 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  flexwrap: nowrap;
+  whitespace: nowrap;
   height: 30px;
-  min-width: 12px;
+  width: auto;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -466,4 +467,33 @@ button {
 .disabledComments a {
   color: #3EA6FF;
   text-decoration: none;
+}
+
+.listVideosContainerColumn {
+  display: none;
+  opacity: 0;
+}
+.flexContainer {
+  display: flex;
+}
+@media only screen and (max-width: 650px) {
+  .videoHeaderInfo {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .listVideosContainer {
+    display: none;
+  }
+  .listVideosContainerColumn {
+    display: flex;
+    width: 500px;
+    height: 200px;
+    background-color: darkblue;
+    z-index: 999;
+  }
+  .flexContainer {
+    flex-direction: row;
+  }
 }
